@@ -7,15 +7,15 @@ import com.fourfingers.quangvinhstore.infrastructure.schema.enums.OrderStatus;
 import com.fourfingers.quangvinhstore.usecase.boundary.customer.CustomerOrderInputBoundary;
 import com.fourfingers.quangvinhstore.usecase.boundary.customer.CustomerOrderOutputBoundary;
 import com.fourfingers.quangvinhstore.usecase.data.customer.PurchaseInputData;
-import com.fourfingers.quangvinhstore.usecase.data.customer.ShippingAddressInputData;
+import com.fourfingers.quangvinhstore.usecase.data.customer.ShippingAddressIdInputData;
 import com.fourfingers.quangvinhstore.usecase.data.customer.order.ListOrderOutputData;
 import com.fourfingers.quangvinhstore.usecase.data.customer.order.OrderOutputData;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
-import javax.swing.text.html.Option;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -31,7 +31,6 @@ public class CustomerOrderUseCaseInteraction implements CustomerOrderInputBounda
     private final OrderRepository orderRepository;
     private final CartDetailsRepository cartDetailsRepository;
     private final ShippingAddressRepository shippingAddressRepository;
-    private final ShippingAddressUseCaseInteraction shippingAddressUseCaseInteraction;
     private final OrderDetailsRepository orderDetailsRepository;
     private final AccountRepository accountRepository;
 
@@ -41,57 +40,53 @@ public class CustomerOrderUseCaseInteraction implements CustomerOrderInputBounda
         return customerOrderOutputBoundary.convertToListCustomerOrderOutputData(
                 orderRepository.findAllByOwnerAccountId(accountEntity.getAccountId())
                         .stream()
-                        .map(orderEntity -> {
-                            orderEntity.getOrderDetails().size();
-                            return orderMapper.toModel(orderEntity);
-                        })
+//                        .map(orderEntity -> {
+//                            orderEntity.getOrderDetails().size();
+//                            return orderMapper.toModel(orderEntity);
+//                        })
+                        .map(orderMapper::toModel)
                         .toList()
         );
     }
 
     @Override
-    public OrderOutputData placeOrders(UserDetails userDetails, ShippingAddressInputData shippingAddressInputData) throws RuntimeException {
+    @Transactional
+    public OrderOutputData placeOrders(UserDetails userDetails, ShippingAddressIdInputData shippingAddressIdInputData) throws RuntimeException {
         AccountEntity accountEntity = (AccountEntity) userDetails;
 
-        ShippingAddressEntity shippingAddressEntity = null;
-        if (shippingAddressInputData.getShippingAddressId() == null) {
-            shippingAddressUseCaseInteraction.saveNewShippingAddress(accountEntity, shippingAddressInputData);
-            List<ShippingAddressEntity> shippingAddressEntities = shippingAddressRepository.findAllByAccount_AccountId(accountEntity.getAccountId());
-            shippingAddressEntity = shippingAddressEntities.get(shippingAddressEntities.size() - 1);
-        } else {
-            Optional<ShippingAddressEntity> existingEntityOpt = shippingAddressRepository
-                    .findByAccount_AccountIdAndShippingAddressId(
-                            accountEntity.getAccountId(),
-                            shippingAddressInputData.getShippingAddressId()
-                    );
-            if (existingEntityOpt.isPresent()) {
-                shippingAddressEntity = existingEntityOpt.get();
-            }
+        Optional<ShippingAddressEntity> shippingAddressEntity = shippingAddressRepository
+                .findByAccount_AccountIdAndShippingAddressIdAndIsActive(
+                        accountEntity.getAccountId(),
+                        shippingAddressIdInputData.getShippingAddressId(),
+                        true
+                );
+        if (shippingAddressIdInputData.getShippingAddressId() == null || shippingAddressEntity.isEmpty()) {
+            throw new RuntimeException("Shipping address not found");
         }
 
-        if (shippingAddressEntity == null) {
-            throw new RuntimeException("Shipping address not found");
+        List<CartDetailsEntity> cartDetailsEntities = cartDetailsRepository.findByAccount_AccountId(accountEntity.getAccountId());
+        if(cartDetailsEntities.isEmpty()) {
+            throw new RuntimeException("Customer doesn't have any product in cart");
         }
 
         OrderEntity orderEntity = new OrderEntity();
         orderEntity.setOrderDate(LocalDateTime.now());
         orderEntity.setOwner(accountEntity);
-        orderEntity.setShippingAddress(shippingAddressEntity);
-        //TODO: fix order status
-//        orderEntity.setOrderStatus(OrderStatus.PREPARING);
+        orderEntity.setShippingAddress(shippingAddressEntity.get());
+        orderEntity.setOrderStatus(OrderStatus.PROCESSING);
+        orderEntity.setPaymentStatus(false);
 
-        List<CartDetailsEntity> cartDetailsEntities = cartDetailsRepository.findByAccount_AccountId(accountEntity.getAccountId());
         List<OrderDetailsEntity> orderDetailsEntities = mapCartDetailsEntityToOrderDetailsEntity(cartDetailsEntities, orderEntity);
         orderEntity.setOrderDetails(orderDetailsEntities);
 
-        BigDecimal totalOrderPrice = calculateTotalOrderPrice(orderEntity.getOrderId(), accountEntity.getAccountId());
+        BigDecimal totalOrderPrice = calculateTotalOrderPrice(orderDetailsEntities);
         orderEntity.setTotalPrice(totalOrderPrice);
 
         accountRepository.findById(accountEntity.getAccountId())
-                                                .ifPresent(account -> {
-                                                    account.setCarts(null);
-                                                    accountRepository.save(account);
-                                                });
+                .ifPresent(account -> {
+                    account.setCarts(null);
+                    accountRepository.save(account);
+                });
         OrderEntity placedOrder = orderRepository.save(orderEntity);
         cartDetailsRepository.deleteByAccount_AccountId(accountEntity.getAccountId());
 
@@ -102,9 +97,12 @@ public class CustomerOrderUseCaseInteraction implements CustomerOrderInputBounda
     public OrderOutputData placeOrderPayLater(UserDetails userDetails, PurchaseInputData purchaseInputData) {
         AccountEntity accountEntity = (AccountEntity) userDetails;
         Optional<OrderEntity> orderEntity = orderRepository.findByOrderIdAndOwnerAccountId(purchaseInputData.getOrderId(),
-                                                                                            accountEntity.getAccountId());
+                accountEntity.getAccountId());
         if (orderEntity.isPresent()) {
-            orderEntity.get().setOrderStatus(OrderStatus.SHIPPING);
+//            orderEntity.get().setOrderStatus(OrderStatus.PROCESSING);
+            orderEntity.get().setPaymentStatus(false);
+            orderEntity.get().setOrderDate(LocalDateTime.now());
+            orderEntity.get().setTotalPrice(calculateTotalOrderPrice(orderEntity.get().getOrderId()));
             OrderEntity placedOrder = orderRepository.save(orderEntity.get());
             return customerOrderOutputBoundary.convertToCustomerOrderOutputData(orderMapper.toModel(placedOrder));
         } else {
@@ -112,20 +110,22 @@ public class CustomerOrderUseCaseInteraction implements CustomerOrderInputBounda
         }
     }
 
-    @Override
-    public OrderOutputData placeOrderPayInAdvance(UserDetails userDetails, PurchaseInputData purchaseInputData) {
-        AccountEntity accountEntity = (AccountEntity) userDetails;
-        Optional<OrderEntity> orderEntity = orderRepository.findByOrderIdAndOwnerAccountId(purchaseInputData.getOrderId(),
-                                                                                            accountEntity.getAccountId());
-        if (orderEntity.isPresent()) {
-            //TODO: fix order status
-//            orderEntity.get().setOrderStatus(OrderStatus.PAID_AND_SHIPPING);
-            OrderEntity placedOrder = orderRepository.save(orderEntity.get());
-            return customerOrderOutputBoundary.convertToCustomerOrderOutputData(orderMapper.toModel(placedOrder));
-        } else {
-            throw new RuntimeException("Order not found");
-        }
-    }
+//    @Override
+//    public OrderOutputData placeOrderPayInAdvance(UserDetails userDetails, PurchaseInputData purchaseInputData) {
+//        AccountEntity accountEntity = (AccountEntity) userDetails;
+//        Optional<OrderEntity> orderEntity = orderRepository.findByOrderIdAndOwnerAccountId(purchaseInputData.getOrderId(),
+//                                                                                            accountEntity.getAccountId());
+//        if (orderEntity.isPresent()) {
+//            orderEntity.get().setOrderStatus(OrderStatus.PROCESSING);
+//            orderEntity.get().setPaymentStatus(true);
+//            orderEntity.get().setOrderDate(LocalDateTime.now());
+//            orderEntity.get().setTotalPrice(calculateTotalOrderPrice(orderEntity.get().getOrderId()));
+//            OrderEntity placedOrder = orderRepository.save(orderEntity.get());
+//            return customerOrderOutputBoundary.convertToCustomerOrderOutputData(orderMapper.toModel(placedOrder));
+//        } else {
+//            throw new RuntimeException("Order not found");
+//        }
+//    }
 
     @Override
     public OrderOutputData getOrder(Long orderId, UserDetails userDetails) throws RuntimeException {
@@ -148,8 +148,10 @@ public class CustomerOrderUseCaseInteraction implements CustomerOrderInputBounda
             Optional<OrderEntity> orderEntity = orderRepository.findBySecureHash(vnp_SecureHash);
             if(orderEntity.isPresent()) {
                 OrderEntity order = orderEntity.get();
-                //TODO: Fix order status
-//                order.setOrderStatus(OrderStatus.PAID_AND_SHIPPING);
+//                order.setOrderStatus(OrderStatus.PROCESSING);
+                order.setPaymentStatus(true);
+                orderEntity.get().setOrderDate(LocalDateTime.now());
+                orderEntity.get().setTotalPrice(calculateTotalOrderPrice(orderEntity.get().getOrderId()));
                 StringBuilder allTransactionInfo = new StringBuilder();
                 for (Map.Entry<String, String> entry : map.entrySet()) {
                     allTransactionInfo.append(entry.getKey()).append("=").append(entry.getValue()).append("&");
@@ -180,16 +182,33 @@ public class CustomerOrderUseCaseInteraction implements CustomerOrderInputBounda
                         .quantity(cartDetails.getQuantity().longValue())
                         .unitPrice(cartDetails.getProductVariant().getProduct().getDiscountedPrice())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private BigDecimal calculateTotalOrderPrice(Long orderId, Long accountId) {
-        List<OrderDetailsEntity> orderDetails = orderDetailsRepository
-                .findByOrder_OrderIdAndOrder_Owner_AccountId(orderId, accountId);
+    private BigDecimal calculateTotalOrderPrice(Long orderId) {
+        List<OrderDetailsEntity> orderDetailsList = orderDetailsRepository
+                .findByOrder_OrderId(orderId);
+        if (orderDetailsList.isEmpty()) {
+            throw new RuntimeException("Order not found");
+        }
+        BigDecimal totalPrice = BigDecimal.ZERO;
+        orderDetailsList.forEach(orderDetail -> {
+            totalPrice.add(orderDetail.getProductVariant().getProduct().getDiscountedPrice().
+                    multiply(BigDecimal.valueOf(orderDetail.getQuantity())));
+        });
+        return totalPrice;
+    }
 
-        return orderDetails.stream()
-                .map(od -> od.getUnitPrice().multiply(BigDecimal.valueOf(od.getQuantity())))
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
+    private BigDecimal calculateTotalOrderPrice(List<OrderDetailsEntity> orderDetailsList) {
+        if (orderDetailsList == null || orderDetailsList.isEmpty()) {
+            throw new RuntimeException("Order not found");
+        }
+        BigDecimal totalPrice = BigDecimal.ZERO;
+        orderDetailsList.forEach(orderDetail -> {
+            totalPrice.add(orderDetail.getProductVariant().getProduct().getDiscountedPrice().
+                    multiply(BigDecimal.valueOf(orderDetail.getQuantity())));
+        });
+        return totalPrice;
     }
 
 }
